--- a/supsub.html
+++ b/supsub.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comment and Breake</title>
+    <title>Sup & Sub</title>
 </head>
 <body>
-    <!-- Heading -->
-    <h1>Heading</h1>
-    <!-- br tag breake -->
-    <br>
-    <br>
-    <br>
-    <h2>Heading Two</h2>
+    <h1>Hello I am <sup>1st</sup> Sandeep <sub>in Town</sub></h1>
 </body>
 </html>
