--- a/specialcharacter.html
+++ b/specialcharacter.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comment and Breake</title>
+    <title>Special Character</title>
 </head>
 <body>
-    <!-- Heading -->
-    <h1>Heading</h1>
-    <!-- br tag breake -->
-    <br>
-    <br>
-    <br>
-    <h2>Heading Two</h2>
+    <!-- Special Character -->
+    <h1>Copyright &copy; &#174;</h1>
 </body>
 </html>
